// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown renders non-undefined values as options 1`] = `
.emotion-15 {
  position: relative;
  min-width: 300px;
  max-width: 450px;
}

.emotion-4 {
  position: relative;
}

.emotion-2 {
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-width: 1px;
  border-bottom-color: rgba(128,128,128,0.35);
  border-bottom-style: solid;
  border-bottom-width: 1px;
}

.emotion-1 {
  position: absolute;
  top: 100%;
  left: -1px;
  right: 0;
  width: calc(100% + 2px);
  height: 0;
  background-color: rgba(14,211,190,0.15);
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
}

.emotion-0 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: 0;
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: 28px;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
}

.emotion-0::-webkit-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::-moz-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0:-ms-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::-ms-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::selection {
  background-color: #0696d7;
}

.emotion-3 {
  fill: #808080;
}

.emotion-3 > * {
  fill: #808080;
}

.emotion-14 {
  display: none;
  position: absolute;
  min-width: 240px;
  max-height: 360px;
  top: 32px;
  overflow: auto;
  z-index: 9996;
  border: 1px solid #ffffff;
  border-top: none;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
  background-color: #ffffff;
  box-shadow: 0 1px 4px rgba(0,0,0,0.25);
}

.emotion-5 {
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  min-height: 36px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 8px;
  cursor: pointer;
  color: #3c3c3c;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.428571429;
  background-color: transparent;
}

.emotion-10 {
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  min-height: 36px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 8px;
  cursor: pointer;
  color: #3c3c3c;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.428571429;
  background-color: rgb(230,244,251);
}

.emotion-9 {
  fill: #087AAD;
}

.emotion-9 > * {
  fill: #087AAD;
}

<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-2-label"
  aria-owns={null}
  className="emotion-15"
  role="combobox"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-2"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls={null}
        aria-labelledby="downshift-2-label"
        autoComplete="off"
        className="emotion-0"
        disabled={undefined}
        id="downshift-2"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        placeholder={undefined}
        readOnly={true}
        required={undefined}
        value=""
      />
      <div
        className="emotion-1"
      />
    </div>
    <svg
      className="emotion-3"
      height="10px"
      style={
        Object {
          "opacity": 1,
          "padding": "0 10px",
          "position": "absolute",
          "right": "7px",
          "top": "calc(32px / 2 - 4px)",
        }
      }
      viewBox="0 0 10 10"
      width="10px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        caret-down-m
      </title>
      <path
        d="M8.71 3.22a.75.75 0 0 0-1.06 0L5 5.87 2.35 3.22a.75.75 0 0 0-1.06 0 .74.74 0 0 0 0 1.06l3.36 3.36a.5.5 0 0 0 .7 0l3.36-3.36a.74.74 0 0 0 0-1.06z"
      />
    </svg>
  </div>
  <div
    aria-labelledby="downshift-2-label"
    className="emotion-14"
    id="downshift-2-menu"
    role="listbox"
  >
    <div
      aria-selected={false}
      className="emotion-5"
      id="downshift-2-item-0"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        foo
      </span>
    </div>
    <div
      aria-selected={false}
      className="emotion-5"
      id="downshift-2-item-1"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        1
      </span>
    </div>
    <div
      aria-selected={false}
      className="emotion-5"
      id="downshift-2-item-2"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        true
      </span>
    </div>
    <div
      aria-selected={false}
      className="emotion-5"
      id="downshift-2-item-3"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        
      </span>
    </div>
    <div
      aria-selected={true}
      className="emotion-10"
      id="downshift-2-item-4"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        
      </span>
      <div
        className="hig__dropdown-option__checkmark"
      >
        <svg
          className="emotion-9"
          color="#087AAD"
          height="24px"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.18 16L6 12.113l1.296-1.292 2.861 2.644L16.679 7 18 8.268z"
            fill="#087AAD"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      aria-selected={false}
      className="emotion-5"
      id="downshift-2-item-5"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        
      </span>
    </div>
    <div
      aria-selected={false}
      className="emotion-5"
      id="downshift-2-item-6"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        [object Object]
      </span>
    </div>
    <div
      aria-selected={false}
      className="emotion-5"
      id="downshift-2-item-7"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        [object Map]
      </span>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders with a controlled value 1`] = `
.emotion-10 {
  position: relative;
  min-width: 300px;
  max-width: 450px;
}

.emotion-4 {
  position: relative;
}

.emotion-2 {
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-width: 1px;
  border-bottom-color: rgba(128,128,128,0.35);
  border-bottom-style: solid;
  border-bottom-width: 1px;
}

.emotion-1 {
  position: absolute;
  top: 100%;
  left: -1px;
  right: 0;
  width: calc(100% + 2px);
  height: 0;
  background-color: rgba(14,211,190,0.15);
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
}

.emotion-0 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: 0;
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: 28px;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
}

.emotion-0::-webkit-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::-moz-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0:-ms-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::-ms-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::selection {
  background-color: #0696d7;
}

.emotion-3 {
  fill: #808080;
}

.emotion-3 > * {
  fill: #808080;
}

.emotion-9 {
  display: none;
  position: absolute;
  min-width: 240px;
  max-height: 360px;
  top: 32px;
  overflow: auto;
  z-index: 9996;
  border: 1px solid #ffffff;
  border-top: none;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
  background-color: #ffffff;
  box-shadow: 0 1px 4px rgba(0,0,0,0.25);
}

.emotion-5 {
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  min-height: 36px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 8px;
  cursor: pointer;
  color: #3c3c3c;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.428571429;
  background-color: transparent;
}

.emotion-8 {
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  min-height: 36px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 8px;
  cursor: pointer;
  color: #3c3c3c;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.428571429;
  background-color: rgb(230,244,251);
}

.emotion-7 {
  fill: #087AAD;
}

.emotion-7 > * {
  fill: #087AAD;
}

<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-9-label"
  aria-owns={null}
  className="emotion-10"
  role="combobox"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-2"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls={null}
        aria-labelledby="downshift-9-label"
        autoComplete="off"
        className="emotion-0"
        disabled={undefined}
        id="downshift-9"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        placeholder={undefined}
        readOnly={true}
        required={undefined}
        value="foo"
      />
      <div
        className="emotion-1"
      />
    </div>
    <svg
      className="emotion-3"
      height="10px"
      style={
        Object {
          "opacity": 1,
          "padding": "0 10px",
          "position": "absolute",
          "right": "7px",
          "top": "calc(32px / 2 - 4px)",
        }
      }
      viewBox="0 0 10 10"
      width="10px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        caret-down-m
      </title>
      <path
        d="M8.71 3.22a.75.75 0 0 0-1.06 0L5 5.87 2.35 3.22a.75.75 0 0 0-1.06 0 .74.74 0 0 0 0 1.06l3.36 3.36a.5.5 0 0 0 .7 0l3.36-3.36a.74.74 0 0 0 0-1.06z"
      />
    </svg>
  </div>
  <div
    aria-labelledby="downshift-9-label"
    className="emotion-9"
    id="downshift-9-menu"
    role="listbox"
  >
    <div
      aria-selected={false}
      className="emotion-5"
      id="downshift-9-item-0"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        bar
      </span>
    </div>
    <div
      aria-selected={false}
      className="emotion-5"
      id="downshift-9-item-1"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        baz
      </span>
    </div>
    <div
      aria-selected={true}
      className="emotion-8"
      id="downshift-9-item-2"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        foo
      </span>
      <div
        className="hig__dropdown-option__checkmark"
      >
        <svg
          className="emotion-7"
          color="#087AAD"
          height="24px"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.18 16L6 12.113l1.296-1.292 2.861 2.644L16.679 7 18 8.268z"
            fill="#087AAD"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders with a label and an ID 1`] = `
.emotion-6 {
  position: relative;
  min-width: 300px;
  max-width: 450px;
}

.emotion-4 {
  position: relative;
}

.emotion-2 {
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-width: 1px;
  border-bottom-color: rgba(128,128,128,0.35);
  border-bottom-style: solid;
  border-bottom-width: 1px;
}

.emotion-1 {
  position: absolute;
  top: 100%;
  left: -1px;
  right: 0;
  width: calc(100% + 2px);
  height: 0;
  background-color: rgba(14,211,190,0.15);
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
}

.emotion-0 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: 0;
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: 28px;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
}

.emotion-0::-webkit-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::-moz-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0:-ms-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::-ms-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::selection {
  background-color: #0696d7;
}

.emotion-3 {
  fill: #808080;
}

.emotion-3 > * {
  fill: #808080;
}

.emotion-5 {
  display: none;
  position: absolute;
  min-width: 240px;
  max-height: 360px;
  top: 32px;
  overflow: auto;
  z-index: 9996;
  border: 1px solid #ffffff;
  border-top: none;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
  background-color: #ffffff;
  box-shadow: 0 1px 4px rgba(0,0,0,0.25);
}

<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="whoaBuddy-label"
  aria-owns={null}
  className="emotion-6"
  role="combobox"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-2"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls={null}
        aria-labelledby="whoaBuddy-label"
        autoComplete="off"
        className="emotion-0"
        disabled={undefined}
        id="whoaBuddy"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        placeholder={undefined}
        readOnly={true}
        required={undefined}
        value=""
      />
      <div
        className="emotion-1"
      />
    </div>
    <svg
      className="emotion-3"
      height="10px"
      style={
        Object {
          "opacity": 1,
          "padding": "0 10px",
          "position": "absolute",
          "right": "7px",
          "top": "calc(32px / 2 - 4px)",
        }
      }
      viewBox="0 0 10 10"
      width="10px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        caret-down-m
      </title>
      <path
        d="M8.71 3.22a.75.75 0 0 0-1.06 0L5 5.87 2.35 3.22a.75.75 0 0 0-1.06 0 .74.74 0 0 0 0 1.06l3.36 3.36a.5.5 0 0 0 .7 0l3.36-3.36a.74.74 0 0 0 0-1.06z"
      />
    </svg>
  </div>
  <div
    aria-labelledby="whoaBuddy-label"
    className="emotion-5"
    id="whoaBuddy-menu"
    role="listbox"
  />
</div>
`;

exports[`Dropdown renders with custom option formatting 1`] = `
.emotion-9 {
  position: relative;
  min-width: 300px;
  max-width: 450px;
}

.emotion-4 {
  position: relative;
}

.emotion-2 {
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-width: 1px;
  border-bottom-color: rgba(128,128,128,0.35);
  border-bottom-style: solid;
  border-bottom-width: 1px;
}

.emotion-1 {
  position: absolute;
  top: 100%;
  left: -1px;
  right: 0;
  width: calc(100% + 2px);
  height: 0;
  background-color: rgba(14,211,190,0.15);
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
}

.emotion-0 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: 0;
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: 28px;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
}

.emotion-0::-webkit-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::-moz-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0:-ms-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::-ms-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::selection {
  background-color: #0696d7;
}

.emotion-3 {
  fill: #808080;
}

.emotion-3 > * {
  fill: #808080;
}

.emotion-8 {
  display: none;
  position: absolute;
  min-width: 240px;
  max-height: 360px;
  top: 32px;
  overflow: auto;
  z-index: 9996;
  border: 1px solid #ffffff;
  border-top: none;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
  background-color: #ffffff;
  box-shadow: 0 1px 4px rgba(0,0,0,0.25);
}

.emotion-5 {
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  min-height: 36px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 8px;
  cursor: pointer;
  color: #3c3c3c;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.428571429;
  background-color: transparent;
}

<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-1-label"
  aria-owns={null}
  className="emotion-9"
  role="combobox"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-2"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls={null}
        aria-labelledby="downshift-1-label"
        autoComplete="off"
        className="emotion-0"
        disabled={undefined}
        id="downshift-1"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        placeholder={undefined}
        readOnly={true}
        required={undefined}
        value=""
      />
      <div
        className="emotion-1"
      />
    </div>
    <svg
      className="emotion-3"
      height="10px"
      style={
        Object {
          "opacity": 1,
          "padding": "0 10px",
          "position": "absolute",
          "right": "7px",
          "top": "calc(32px / 2 - 4px)",
        }
      }
      viewBox="0 0 10 10"
      width="10px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        caret-down-m
      </title>
      <path
        d="M8.71 3.22a.75.75 0 0 0-1.06 0L5 5.87 2.35 3.22a.75.75 0 0 0-1.06 0 .74.74 0 0 0 0 1.06l3.36 3.36a.5.5 0 0 0 .7 0l3.36-3.36a.74.74 0 0 0 0-1.06z"
      />
    </svg>
  </div>
  <div
    aria-labelledby="downshift-1-label"
    className="emotion-8"
    id="downshift-1-menu"
    role="listbox"
  >
    <div
      aria-selected={false}
      className="emotion-5"
      id="downshift-1-item-0"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        Bar
      </span>
    </div>
    <div
      aria-selected={false}
      className="emotion-5"
      id="downshift-1-item-1"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        Baz
      </span>
    </div>
    <div
      aria-selected={false}
      className="emotion-5"
      id="downshift-1-item-2"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        Foo
      </span>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders with custom option render function 1`] = `
.emotion-6 {
  position: relative;
  min-width: 300px;
  max-width: 450px;
}

.emotion-4 {
  position: relative;
}

.emotion-2 {
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-width: 1px;
  border-bottom-color: rgba(128,128,128,0.35);
  border-bottom-style: solid;
  border-bottom-width: 1px;
}

.emotion-1 {
  position: absolute;
  top: 100%;
  left: -1px;
  right: 0;
  width: calc(100% + 2px);
  height: 0;
  background-color: rgba(14,211,190,0.15);
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
}

.emotion-0 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: 0;
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: 28px;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
}

.emotion-0::-webkit-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::-moz-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0:-ms-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::-ms-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::selection {
  background-color: #0696d7;
}

.emotion-3 {
  fill: #808080;
}

.emotion-3 > * {
  fill: #808080;
}

.emotion-5 {
  display: none;
  position: absolute;
  min-width: 240px;
  max-height: 360px;
  top: 32px;
  overflow: auto;
  z-index: 9996;
  border: 1px solid #ffffff;
  border-top: none;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
  background-color: #ffffff;
  box-shadow: 0 1px 4px rgba(0,0,0,0.25);
}

<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-3-label"
  aria-owns={null}
  className="emotion-6"
  role="combobox"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-2"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls={null}
        aria-labelledby="downshift-3-label"
        autoComplete="off"
        className="emotion-0"
        disabled={undefined}
        id="downshift-3"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        placeholder={undefined}
        readOnly={true}
        required={undefined}
        value=""
      />
      <div
        className="emotion-1"
      />
    </div>
    <svg
      className="emotion-3"
      height="10px"
      style={
        Object {
          "opacity": 1,
          "padding": "0 10px",
          "position": "absolute",
          "right": "7px",
          "top": "calc(32px / 2 - 4px)",
        }
      }
      viewBox="0 0 10 10"
      width="10px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        caret-down-m
      </title>
      <path
        d="M8.71 3.22a.75.75 0 0 0-1.06 0L5 5.87 2.35 3.22a.75.75 0 0 0-1.06 0 .74.74 0 0 0 0 1.06l3.36 3.36a.5.5 0 0 0 .7 0l3.36-3.36a.74.74 0 0 0 0-1.06z"
      />
    </svg>
  </div>
  <div
    aria-labelledby="downshift-3-label"
    className="emotion-5"
    id="downshift-3-menu"
    role="listbox"
  >
    <div>
      RENDERS
    </div>
    <div>
      WITH
    </div>
    <div>
      CUSTOM
    </div>
    <div>
      OPTION
    </div>
    <div>
      RENDER
    </div>
    <div>
      FUNCTION
    </div>
  </div>
</div>
`;

exports[`Dropdown renders with default value 1`] = `
.emotion-10 {
  position: relative;
  min-width: 300px;
  max-width: 450px;
}

.emotion-4 {
  position: relative;
}

.emotion-2 {
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-width: 1px;
  border-bottom-color: rgba(128,128,128,0.35);
  border-bottom-style: solid;
  border-bottom-width: 1px;
}

.emotion-1 {
  position: absolute;
  top: 100%;
  left: -1px;
  right: 0;
  width: calc(100% + 2px);
  height: 0;
  background-color: rgba(14,211,190,0.15);
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
}

.emotion-0 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: 0;
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: 28px;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
}

.emotion-0::-webkit-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::-moz-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0:-ms-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::-ms-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::selection {
  background-color: #0696d7;
}

.emotion-3 {
  fill: #808080;
}

.emotion-3 > * {
  fill: #808080;
}

.emotion-9 {
  display: none;
  position: absolute;
  min-width: 240px;
  max-height: 360px;
  top: 32px;
  overflow: auto;
  z-index: 9996;
  border: 1px solid #ffffff;
  border-top: none;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
  background-color: #ffffff;
  box-shadow: 0 1px 4px rgba(0,0,0,0.25);
}

.emotion-5 {
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  min-height: 36px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 8px;
  cursor: pointer;
  color: #3c3c3c;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.428571429;
  background-color: transparent;
}

.emotion-8 {
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  min-height: 36px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 8px;
  cursor: pointer;
  color: #3c3c3c;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.428571429;
  background-color: rgb(230,244,251);
}

.emotion-7 {
  fill: #087AAD;
}

.emotion-7 > * {
  fill: #087AAD;
}

<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-7-label"
  aria-owns={null}
  className="emotion-10"
  role="combobox"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-2"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls={null}
        aria-labelledby="downshift-7-label"
        autoComplete="off"
        className="emotion-0"
        disabled={undefined}
        id="downshift-7"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        placeholder={undefined}
        readOnly={true}
        required={undefined}
        value="foo"
      />
      <div
        className="emotion-1"
      />
    </div>
    <svg
      className="emotion-3"
      height="10px"
      style={
        Object {
          "opacity": 1,
          "padding": "0 10px",
          "position": "absolute",
          "right": "7px",
          "top": "calc(32px / 2 - 4px)",
        }
      }
      viewBox="0 0 10 10"
      width="10px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        caret-down-m
      </title>
      <path
        d="M8.71 3.22a.75.75 0 0 0-1.06 0L5 5.87 2.35 3.22a.75.75 0 0 0-1.06 0 .74.74 0 0 0 0 1.06l3.36 3.36a.5.5 0 0 0 .7 0l3.36-3.36a.74.74 0 0 0 0-1.06z"
      />
    </svg>
  </div>
  <div
    aria-labelledby="downshift-7-label"
    className="emotion-9"
    id="downshift-7-menu"
    role="listbox"
  >
    <div
      aria-selected={false}
      className="emotion-5"
      id="downshift-7-item-0"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        bar
      </span>
    </div>
    <div
      aria-selected={false}
      className="emotion-5"
      id="downshift-7-item-1"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        baz
      </span>
    </div>
    <div
      aria-selected={true}
      className="emotion-8"
      id="downshift-7-item-2"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        foo
      </span>
      <div
        className="hig__dropdown-option__checkmark"
      >
        <svg
          className="emotion-7"
          color="#087AAD"
          height="24px"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.18 16L6 12.113l1.296-1.292 2.861 2.644L16.679 7 18 8.268z"
            fill="#087AAD"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders with multiple selection 1`] = `
.emotion-9 {
  position: relative;
  min-width: 300px;
  max-width: 450px;
}

.emotion-4 {
  position: relative;
}

.emotion-2 {
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-width: 1px;
  border-bottom-color: rgba(128,128,128,0.35);
  border-bottom-style: solid;
  border-bottom-width: 1px;
}

.emotion-1 {
  position: absolute;
  top: 100%;
  left: -1px;
  right: 0;
  width: calc(100% + 2px);
  height: 0;
  background-color: rgba(14,211,190,0.15);
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
}

.emotion-0 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: 0;
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: 28px;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
}

.emotion-0::-webkit-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::-moz-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0:-ms-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::-ms-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::selection {
  background-color: #0696d7;
}

.emotion-3 {
  fill: #808080;
}

.emotion-3 > * {
  fill: #808080;
}

.emotion-8 {
  display: none;
  position: absolute;
  min-width: 240px;
  max-height: 360px;
  top: 32px;
  overflow: auto;
  z-index: 9996;
  border: 1px solid #ffffff;
  border-top: none;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
  background-color: #ffffff;
  box-shadow: 0 1px 4px rgba(0,0,0,0.25);
}

.emotion-5 {
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  min-height: 36px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 8px;
  cursor: pointer;
  color: #3c3c3c;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.428571429;
  background-color: transparent;
}

<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-8-label"
  aria-owns={null}
  className="emotion-9"
  role="combobox"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-2"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls={null}
        aria-labelledby="downshift-8-label"
        autoComplete="off"
        className="emotion-0"
        disabled={undefined}
        id="downshift-8"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        placeholder={undefined}
        readOnly={true}
        required={undefined}
        value=""
      />
      <div
        className="emotion-1"
      />
    </div>
    <svg
      className="emotion-3"
      height="10px"
      style={
        Object {
          "opacity": 1,
          "padding": "0 10px",
          "position": "absolute",
          "right": "7px",
          "top": "calc(32px / 2 - 4px)",
        }
      }
      viewBox="0 0 10 10"
      width="10px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        caret-down-m
      </title>
      <path
        d="M8.71 3.22a.75.75 0 0 0-1.06 0L5 5.87 2.35 3.22a.75.75 0 0 0-1.06 0 .74.74 0 0 0 0 1.06l3.36 3.36a.5.5 0 0 0 .7 0l3.36-3.36a.74.74 0 0 0 0-1.06z"
      />
    </svg>
  </div>
  <div
    aria-labelledby="downshift-8-label"
    className="emotion-8"
    id="downshift-8-menu"
    role="listbox"
  >
    <div
      aria-selected={false}
      className="emotion-5"
      id="downshift-8-item-0"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        bar
      </span>
    </div>
    <div
      aria-selected={false}
      className="emotion-5"
      id="downshift-8-item-1"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        baz
      </span>
    </div>
    <div
      aria-selected={false}
      className="emotion-5"
      id="downshift-8-item-2"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        foo
      </span>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders with multiple selection and a controlled value 1`] = `
.emotion-11 {
  position: relative;
  min-width: 300px;
  max-width: 450px;
}

.emotion-4 {
  position: relative;
}

.emotion-2 {
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-width: 1px;
  border-bottom-color: rgba(128,128,128,0.35);
  border-bottom-style: solid;
  border-bottom-width: 1px;
}

.emotion-1 {
  position: absolute;
  top: 100%;
  left: -1px;
  right: 0;
  width: calc(100% + 2px);
  height: 0;
  background-color: rgba(14,211,190,0.15);
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
}

.emotion-0 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: 0;
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: 28px;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
}

.emotion-0::-webkit-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::-moz-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0:-ms-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::-ms-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::selection {
  background-color: #0696d7;
}

.emotion-3 {
  fill: #808080;
}

.emotion-3 > * {
  fill: #808080;
}

.emotion-10 {
  display: none;
  position: absolute;
  min-width: 240px;
  max-height: 360px;
  top: 32px;
  overflow: auto;
  z-index: 9996;
  border: 1px solid #ffffff;
  border-top: none;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
  background-color: #ffffff;
  box-shadow: 0 1px 4px rgba(0,0,0,0.25);
}

.emotion-7 {
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  min-height: 36px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 8px;
  cursor: pointer;
  color: #3c3c3c;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.428571429;
  background-color: transparent;
}

.emotion-6 {
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  min-height: 36px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 8px;
  cursor: pointer;
  color: #3c3c3c;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.428571429;
  background-color: rgb(230,244,251);
}

.emotion-5 {
  fill: #087AAD;
}

.emotion-5 > * {
  fill: #087AAD;
}

<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-10-label"
  aria-owns={null}
  className="emotion-11"
  role="combobox"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-2"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls={null}
        aria-labelledby="downshift-10-label"
        autoComplete="off"
        className="emotion-0"
        disabled={undefined}
        id="downshift-10"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        placeholder={undefined}
        readOnly={true}
        required={undefined}
        value="foo, bar"
      />
      <div
        className="emotion-1"
      />
    </div>
    <svg
      className="emotion-3"
      height="10px"
      style={
        Object {
          "opacity": 1,
          "padding": "0 10px",
          "position": "absolute",
          "right": "7px",
          "top": "calc(32px / 2 - 4px)",
        }
      }
      viewBox="0 0 10 10"
      width="10px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        caret-down-m
      </title>
      <path
        d="M8.71 3.22a.75.75 0 0 0-1.06 0L5 5.87 2.35 3.22a.75.75 0 0 0-1.06 0 .74.74 0 0 0 0 1.06l3.36 3.36a.5.5 0 0 0 .7 0l3.36-3.36a.74.74 0 0 0 0-1.06z"
      />
    </svg>
  </div>
  <div
    aria-labelledby="downshift-10-label"
    className="emotion-10"
    id="downshift-10-menu"
    role="listbox"
  >
    <div
      aria-selected={true}
      className="emotion-6"
      id="downshift-10-item-0"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        bar
      </span>
      <div
        className="hig__dropdown-option__checkmark"
      >
        <svg
          className="emotion-5"
          color="#087AAD"
          height="24px"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.18 16L6 12.113l1.296-1.292 2.861 2.644L16.679 7 18 8.268z"
            fill="#087AAD"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      aria-selected={false}
      className="emotion-7"
      id="downshift-10-item-1"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        baz
      </span>
    </div>
    <div
      aria-selected={true}
      className="emotion-6"
      id="downshift-10-item-2"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        foo
      </span>
      <div
        className="hig__dropdown-option__checkmark"
      >
        <svg
          className="emotion-5"
          color="#087AAD"
          height="24px"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.18 16L6 12.113l1.296-1.292 2.861 2.644L16.679 7 18 8.268z"
            fill="#087AAD"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders with option specific and general option render function 1`] = `
.emotion-6 {
  position: relative;
  min-width: 300px;
  max-width: 450px;
}

.emotion-4 {
  position: relative;
}

.emotion-2 {
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-width: 1px;
  border-bottom-color: rgba(128,128,128,0.35);
  border-bottom-style: solid;
  border-bottom-width: 1px;
}

.emotion-1 {
  position: absolute;
  top: 100%;
  left: -1px;
  right: 0;
  width: calc(100% + 2px);
  height: 0;
  background-color: rgba(14,211,190,0.15);
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
}

.emotion-0 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: 0;
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: 28px;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
}

.emotion-0::-webkit-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::-moz-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0:-ms-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::-ms-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::selection {
  background-color: #0696d7;
}

.emotion-3 {
  fill: #808080;
}

.emotion-3 > * {
  fill: #808080;
}

.emotion-5 {
  display: none;
  position: absolute;
  min-width: 240px;
  max-height: 360px;
  top: 32px;
  overflow: auto;
  z-index: 9996;
  border: 1px solid #ffffff;
  border-top: none;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
  background-color: #ffffff;
  box-shadow: 0 1px 4px rgba(0,0,0,0.25);
}

<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-5-label"
  aria-owns={null}
  className="emotion-6"
  role="combobox"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-2"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls={null}
        aria-labelledby="downshift-5-label"
        autoComplete="off"
        className="emotion-0"
        disabled={undefined}
        id="downshift-5"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        placeholder={undefined}
        readOnly={true}
        required={undefined}
        value=""
      />
      <div
        className="emotion-1"
      />
    </div>
    <svg
      className="emotion-3"
      height="10px"
      style={
        Object {
          "opacity": 1,
          "padding": "0 10px",
          "position": "absolute",
          "right": "7px",
          "top": "calc(32px / 2 - 4px)",
        }
      }
      viewBox="0 0 10 10"
      width="10px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        caret-down-m
      </title>
      <path
        d="M8.71 3.22a.75.75 0 0 0-1.06 0L5 5.87 2.35 3.22a.75.75 0 0 0-1.06 0 .74.74 0 0 0 0 1.06l3.36 3.36a.5.5 0 0 0 .7 0l3.36-3.36a.74.74 0 0 0 0-1.06z"
      />
    </svg>
  </div>
  <div
    aria-labelledby="downshift-5-label"
    className="emotion-5"
    id="downshift-5-menu"
    role="listbox"
  >
    <div
      style={
        Object {
          "backgroundColor": "white",
          "padding": "2px 4px",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "#ff0000",
            "height": "24px",
            "width": "32px",
          }
        }
      />
      <p>
        Red
      </p>
    </div>
    <div>
      GREEN
    </div>
    <div>
      BLUE
    </div>
  </div>
</div>
`;

exports[`Dropdown renders with option specific render function 1`] = `
.emotion-6 {
  position: relative;
  min-width: 300px;
  max-width: 450px;
}

.emotion-4 {
  position: relative;
}

.emotion-2 {
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-width: 1px;
  border-bottom-color: rgba(128,128,128,0.35);
  border-bottom-style: solid;
  border-bottom-width: 1px;
}

.emotion-1 {
  position: absolute;
  top: 100%;
  left: -1px;
  right: 0;
  width: calc(100% + 2px);
  height: 0;
  background-color: rgba(14,211,190,0.15);
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
}

.emotion-0 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: 0;
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: 28px;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
}

.emotion-0::-webkit-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::-moz-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0:-ms-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::-ms-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::selection {
  background-color: #0696d7;
}

.emotion-3 {
  fill: #808080;
}

.emotion-3 > * {
  fill: #808080;
}

.emotion-5 {
  display: none;
  position: absolute;
  min-width: 240px;
  max-height: 360px;
  top: 32px;
  overflow: auto;
  z-index: 9996;
  border: 1px solid #ffffff;
  border-top: none;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
  background-color: #ffffff;
  box-shadow: 0 1px 4px rgba(0,0,0,0.25);
}

<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-4-label"
  aria-owns={null}
  className="emotion-6"
  role="combobox"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-2"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls={null}
        aria-labelledby="downshift-4-label"
        autoComplete="off"
        className="emotion-0"
        disabled={undefined}
        id="downshift-4"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        placeholder={undefined}
        readOnly={true}
        required={undefined}
        value=""
      />
      <div
        className="emotion-1"
      />
    </div>
    <svg
      className="emotion-3"
      height="10px"
      style={
        Object {
          "opacity": 1,
          "padding": "0 10px",
          "position": "absolute",
          "right": "7px",
          "top": "calc(32px / 2 - 4px)",
        }
      }
      viewBox="0 0 10 10"
      width="10px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        caret-down-m
      </title>
      <path
        d="M8.71 3.22a.75.75 0 0 0-1.06 0L5 5.87 2.35 3.22a.75.75 0 0 0-1.06 0 .74.74 0 0 0 0 1.06l3.36 3.36a.5.5 0 0 0 .7 0l3.36-3.36a.74.74 0 0 0 0-1.06z"
      />
    </svg>
  </div>
  <div
    aria-labelledby="downshift-4-label"
    className="emotion-5"
    id="downshift-4-menu"
    role="listbox"
  >
    <div
      style={
        Object {
          "backgroundColor": "white",
          "padding": "2px 4px",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "#ff0000",
            "height": "24px",
            "width": "32px",
          }
        }
      />
      <p>
        Red
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "white",
          "padding": "2px 4px",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "#00ff00",
            "height": "24px",
            "width": "32px",
          }
        }
      />
      <p>
        Green
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "white",
          "padding": "2px 4px",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "#0000ff",
            "height": "24px",
            "width": "32px",
          }
        }
      />
      <p>
        Blue
      </p>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders with option specific, general and format rendering 1`] = `
.emotion-6 {
  position: relative;
  min-width: 300px;
  max-width: 450px;
}

.emotion-4 {
  position: relative;
}

.emotion-2 {
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-width: 1px;
  border-bottom-color: rgba(128,128,128,0.35);
  border-bottom-style: solid;
  border-bottom-width: 1px;
}

.emotion-1 {
  position: absolute;
  top: 100%;
  left: -1px;
  right: 0;
  width: calc(100% + 2px);
  height: 0;
  background-color: rgba(14,211,190,0.15);
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
}

.emotion-0 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: 0;
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: 28px;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
}

.emotion-0::-webkit-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::-moz-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0:-ms-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::-ms-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::selection {
  background-color: #0696d7;
}

.emotion-3 {
  fill: #808080;
}

.emotion-3 > * {
  fill: #808080;
}

.emotion-5 {
  display: none;
  position: absolute;
  min-width: 240px;
  max-height: 360px;
  top: 32px;
  overflow: auto;
  z-index: 9996;
  border: 1px solid #ffffff;
  border-top: none;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
  background-color: #ffffff;
  box-shadow: 0 1px 4px rgba(0,0,0,0.25);
}

<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-6-label"
  aria-owns={null}
  className="emotion-6"
  role="combobox"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-2"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls={null}
        aria-labelledby="downshift-6-label"
        autoComplete="off"
        className="emotion-0"
        disabled={undefined}
        id="downshift-6"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        placeholder={undefined}
        readOnly={true}
        required={undefined}
        value=""
      />
      <div
        className="emotion-1"
      />
    </div>
    <svg
      className="emotion-3"
      height="10px"
      style={
        Object {
          "opacity": 1,
          "padding": "0 10px",
          "position": "absolute",
          "right": "7px",
          "top": "calc(32px / 2 - 4px)",
        }
      }
      viewBox="0 0 10 10"
      width="10px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        caret-down-m
      </title>
      <path
        d="M8.71 3.22a.75.75 0 0 0-1.06 0L5 5.87 2.35 3.22a.75.75 0 0 0-1.06 0 .74.74 0 0 0 0 1.06l3.36 3.36a.5.5 0 0 0 .7 0l3.36-3.36a.74.74 0 0 0 0-1.06z"
      />
    </svg>
  </div>
  <div
    aria-labelledby="downshift-6-label"
    className="emotion-5"
    id="downshift-6-menu"
    role="listbox"
  >
    <div
      style={
        Object {
          "backgroundColor": "white",
          "padding": "2px 4px",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "#ff0000",
            "height": "24px",
            "width": "32px",
          }
        }
      />
      <p>
        Red
      </p>
    </div>
    <div>
      GREEN
    </div>
    <div>
      BLUE
    </div>
  </div>
</div>
`;

exports[`Dropdown renders without props 1`] = `
.emotion-6 {
  position: relative;
  min-width: 300px;
  max-width: 450px;
}

.emotion-4 {
  position: relative;
}

.emotion-2 {
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-width: 1px;
  border-bottom-color: rgba(128,128,128,0.35);
  border-bottom-style: solid;
  border-bottom-width: 1px;
}

.emotion-1 {
  position: absolute;
  top: 100%;
  left: -1px;
  right: 0;
  width: calc(100% + 2px);
  height: 0;
  background-color: rgba(14,211,190,0.15);
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
}

.emotion-0 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: 0;
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: 28px;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
}

.emotion-0::-webkit-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::-moz-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0:-ms-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::-ms-input-placeholder {
  color: rgba(60,60,60,0.7);
}

.emotion-0::selection {
  background-color: #0696d7;
}

.emotion-3 {
  fill: #808080;
}

.emotion-3 > * {
  fill: #808080;
}

.emotion-5 {
  display: none;
  position: absolute;
  min-width: 240px;
  max-height: 360px;
  top: 32px;
  overflow: auto;
  z-index: 9996;
  border: 1px solid #ffffff;
  border-top: none;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
  background-color: #ffffff;
  box-shadow: 0 1px 4px rgba(0,0,0,0.25);
}

<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-0-label"
  aria-owns={null}
  className="emotion-6"
  role="combobox"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-2"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls={null}
        aria-labelledby="downshift-0-label"
        autoComplete="off"
        className="emotion-0"
        disabled={undefined}
        id="downshift-0"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        placeholder={undefined}
        readOnly={true}
        required={undefined}
        value=""
      />
      <div
        className="emotion-1"
      />
    </div>
    <svg
      className="emotion-3"
      height="10px"
      style={
        Object {
          "opacity": 1,
          "padding": "0 10px",
          "position": "absolute",
          "right": "7px",
          "top": "calc(32px / 2 - 4px)",
        }
      }
      viewBox="0 0 10 10"
      width="10px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        caret-down-m
      </title>
      <path
        d="M8.71 3.22a.75.75 0 0 0-1.06 0L5 5.87 2.35 3.22a.75.75 0 0 0-1.06 0 .74.74 0 0 0 0 1.06l3.36 3.36a.5.5 0 0 0 .7 0l3.36-3.36a.74.74 0 0 0 0-1.06z"
      />
    </svg>
  </div>
  <div
    aria-labelledby="downshift-0-label"
    className="emotion-5"
    id="downshift-0-menu"
    role="listbox"
  />
</div>
`;
